experiment with media queries to prevent project container from going off screen

--- a/src/styles.css
+++ b/src/styles.css
@@ -74,7 +74,7 @@ a {
 
 a.hover-text-about:hover {
   filter: invert(0.5) sepia(1) hue-rotate(200deg) saturate(3);
-    margin-left: 80px;
+  margin-left: 80px;
 }
 
 a.hover-text-projects:hover {
@@ -176,6 +176,32 @@ a.hover-text-contact:hover {
   align-items: center;
 }
 
+@media only screen and (min-width: 1001px) {
+  
+  #project-container {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    text-align: center;
+    padding: 80px;
+    flex-wrap: wrap;
+
+  }
+
+
+  .project-description {
+    font-size: 15px;
+    font-weight: 300;
+  }
+  
+  .project-link {
+    text-decoration: none;
+    color: rgb(255, 189, 89);
+  }
+  
+
+}
+
 /* PROJECTS */
 
 .projects {
@@ -195,13 +221,13 @@ a.hover-text-contact:hover {
 
 .project-card {
   width: 450px;
-  /* height: 500px; */
+  height: 650px;
   border-radius: 50px;
   margin: 15px;
 }
 
 .project-img {
-  margin-top: 25px;
+  /* margin-top: 25px; */
   width: 430px;
   height: 400px;
   object-fit: cover;
@@ -224,7 +250,7 @@ a.hover-text-contact:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 100px;
+  /* padding-top: 100px; */
   padding-bottom: 80px;
 }
 
@@ -249,7 +275,7 @@ form {
 
 .form-button:hover {
   background-color: rgb(255, 189, 89);
-  
+
 }
 
 .form-button:active {
@@ -303,7 +329,7 @@ form {
   ul.show {
     display: block;
   }
-    
+
 
   nav {
     display: flex;
@@ -316,13 +342,40 @@ form {
   .logo {
     display: none;
   }
-}
 
+  .project-container {
+    display: flex;
+    flex-wrap: wrap;
+
+  }
+
+  .project-img {
+    width: 275px;
+    height: 250px;
+  }
+
+  .project-descriptions {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+
+  }
+
+  .project-link {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+  }
+
+
+}
 
 
 /* HERO AND SOCIALS */
 
-@media only screen and (min-device-width: 481px) and (max-device-width: 768px) {
+@media only screen and (min-device-width: 480px) and (max-device-width: 768px) {
 
 
   #hero-area {
@@ -330,7 +383,7 @@ form {
     flex-wrap: wrap;
     overflow: hidden;
     justify-content: center;
-  
+
   }
 
   #hero-text {
@@ -362,7 +415,7 @@ form {
   .project-container {
     display: flex;
     flex-wrap: wrap;
-  
+
   }
 
   .project-img {
@@ -375,7 +428,7 @@ form {
     flex-wrap: wrap;
     justify-content: center;
     text-align: center;
-    
+
   }
 
   .project-link {
@@ -389,8 +442,8 @@ form {
 /* CONTACT SECTION */
 
 @media only screen and (min-device-width: 481px) and (max-device-width: 768px) {
-  #contact{
+  #contact {
     display: flex;
     flex-wrap: wrap;
-    }
   }
+}
